*************************************
*** SquirrelMail Devel Series 1.5 ***
*************************************

Version 1.5.2 - SVN
-------------------
  - Fix broken set_url_var function in functions/html.php (#1729814).
  - Fix incorrect detection of auth mechanisms in conf.pl (#1727033).
  - The search expression in the LDAP backend of the Addressbook is now
    configurable, which can allow the result set to be expanded.
  - Preliminary support for NAMESPACE in Squirrelmail IMAP Backend: NAMESPACE
    is parsed and stored in session upon login.
  - Now uses the $Forwarded IMAP keyword for forwarded messages, when it is
    enabled or when arbitrary keywords ("PERMANENT FLAGS \*") are permitted.
    RFC 4550, paragraph 2.8.
  - Added support for authorization identifier in IMAP backend, for SASL
    authentication mechanisms PLAIN and DIGEST-MD5. This can be set upon login
    by use of an external plugin.
  - Fix warning about array required in array_keys for display options when no
    fontset is defined.
  - Added "bad plugin" blacklist in configtest.php.
  - Fix MagicHTML fix with respect to parsing of u\rl in IE.
  - Added monitored folders option to newmail plugin.
  - Tweaked STARTTLS option for SMTP/IMAP to allow previous settings of just
    pure TLS not to be used to assume STARTTLS.
  - Fixed quotes in configuration strings in administrator plugin.
  - Fixed View as HTML link so it doesn't forget it was part of a seach result.
  - Don't use delimiter in IMAP subscription command, when noselect folder is
    created.
  - Security: Possible cookie theft in src/redirect.php if 
    register_globals is enabled, and malicous site is running
    in same domain.
  - Stop URL parsing, if 8bit symbols or HTML entities are detected (#1356798).
  - Added new color themes by Jeremy Landes, Tammi Maggard and Lucas Austin-Howe 
    (#1378332), (#1377567), (#1377529), (#1377528), (#1377527), (#1377526), 
    (#1377525), (#1393188).